[Vpu Wrapper]: ver 1.0.47 release
    (1) ENGR00305449: [Android_MX6Q_SD/DL_ARD_Full] H264Dec : The stream is not played without any error info pops up.
        vpu may report no frame even all frames are hold by vpu.
        Add workaround: check state for all frame buffers, rectify the wrong index manually
        e.g. change invalid DecIndx from -1 to -2.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.47:
+  add one workaround to fix AVC decoder no frame issue
+
 ver 1.0.46:
   add debug code to detect illegal memory access
 
