[Vpu Wrapper]: ver 1.0.49
  (1) version 1.0.49 release: depend on vpu lib 5.4.24 or later
      - add config for intra refresh mode: VPU_ENC_CONF_INTRA_REFRESH_MODE
      - enhance avcc conversion for corrupted clips
      - change deblock related parameter(avc_deblkFilterOffsetAlpha=0) to improve encode quality
      - config stuff padding(disable) for mjpeg encoder
      - add some parameters for unit test,include gamma, initialdelay, refreshratio,refreshmode

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 
 Change log:
 
+ver 1.0.49:
+  add config for intra refresh mode
+  enhance avcc conversion for corrupted clips
+  change deblock related parameter to improve encode quality
+  config stuff padding(disable) for mjpeg encoder
+
 ver 1.0.48:
   enhace the robust in avcc conversion operation for corrupted clips
   add api to query the available frame buffer number in decoder
