[Vpu Wrapper]: version 1.0.50
  (1) ENGR00313206: [LMX6DQ_SD]GST1.0 VC1Dec: video disappear after play about 20s. 100%.
      fix bug related with the conflict buffer state
      for conflict buffer, we shouldn't release it to vpu if its state is display
  (2) Add support for nal_size_length is equal to 1 or 2
      in such case, we will remalloc one temporary buffer with new size before feeding to vpu
  (3) Fix bug in detecting of illegal memory access
      need to pad height with 16 or 32(interlaced).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 
 Change log:
 
+ver 1.0.50:
+  add support for nal_size_length is equal to 1 or 2
+  fix bug in detecting of illegal memory access
+  fix bug related with conflict buffer state
+
 ver 1.0.49:
   add config for intra refresh mode
   enhance avcc conversion for corrupted clips
