[Vpu Wrapper]:  version 1.0.53
   (1) add detecting of resoluton change(bit20)
   (2) fix bug of eos condition in multi-instance
       ENGR00322359: [LMX6Q_SD]GST1.0 VC1Dec: Terminal not responding when reproducing stream at FF4x. 100%
       remove one static variable 'eos_flag' which will lead to conflict in multi-instance cases.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 
 Change log:
 
+ver 1.0.53:
+  add detecting of resoluton change(bit20)
+  fix bug of eos condition in multi-instance
+  
 ver 1.0.52:
   For corrupted clips with only one frame, we will report error instead of eos
   
