[Vpu Wrapper]: version 1.0.54
   (1) ENGR00325791: [LMX6DL_SD_Full]Can't play on beta RC2 with gplay ...
       revert detect of resolution change(bit20)
       vpu may report resolution change wrong due to corrupted clips.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.54:
+  revert detection of resolution change(bit20) since vpu may report resolution change wrong for corrupted clips.
+
 ver 1.0.53:
   add detecting of resoluton change(bit20)
   fix bug of eos condition in multi-instance
