[Vpu Wrapper]:  version 1.0.55
     (1) fix bug for resolution change in loop play
         in gst-plugin 1.x design, plugin will send eos in trick mode
         in such case, we need to clear some internal variables after eos condition is triggered.
     (2) add workaround to fix rmvb decode timeout issue
         in this case, vpu will decode timeout if no enough frame buffer
         so we need to make sure vpu always have enough frame before starting decode.
     (3) refine encoder unit test
         enable 'nAvc_constrainedIntraPredFlag'
         modify the formula for intrarefresh

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 
 Change log:
 
+ver 1.0.55:
+  fix bug for resolution change in loop play
+  add workaround for rmvb decode timeout issue when no enough frame buffer
+
 ver 1.0.54:
   revert detection of resolution change(bit20) since vpu may report resolution change wrong for corrupted clips.
 
