[Vpu Wrapper]:  version 1.0.57
   (1) MMFMWK-6421: [LMX6Q_SD]MPEG2TS: one stream with dynamic resolution can't do FF/FB. 100%
       one internal variable need to be cleared,
       otherwise, vpu wrapper may always return repeated frame in this special case.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.57:
+  fix bug for clips with resolution change in which one internal variable need to be cleared.
+
 ver 1.0.56:
   re-enable detection of resolution change due to the latest FW
 
