[vpu wrapper]:  MMFMWK-6489: encoder potential crash issue in multi-instance case
  (1) In original design, vpu wrapper will call vpu_IsBusy before closing vpu,
      in multi-instance environment, there will be potential risk when call vpu_IsBusy
      which is safe only between encode start and get output.
      In such case, one process may access virtual memory space in another process,
      as a result, crash (segment fault) happen.
      solution:
         avoid call vpu_IsBusy, just call reset when return not_complete
         close -> if (not complete) then { reset -> close}

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.58:
+  fix one potential risk where encoder may crash at close stage in multi-instance case
+  
 ver 1.0.57:
   fix bug for clips with resolution change in which one internal variable need to be cleared.
 
