[Vpu Wrapper]:  version 1.0.59
   (1) handle the special gop size in order to pass some android CTS test
       for large gopsize, we will reset it with maxium size, but not return invalid parameter
   (2) enhance the unit test to fix the encoder random output issue
       we need to align input yuv buffer, otherwise, the output maybe not the same as previous execution.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.59:
+  handle the special gop size in order to pass some CTS tests in which large gopsize will be set
+  
 ver 1.0.58:
   fix one potential risk where encoder may crash at close stage in multi-instance case
   
