[Vpu Wrapper]:   version 1.0.60
   (1) Fix MMFMWK-6738: failed when test cts issue android.media.cts.ImageReaderDecoderTest testOtherVP8Image
       For vp8, we need to get resolution info from 'vp8ScaleInfo'

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.60:
+  fix the inaccurate crop info for vp8
+
 ver 1.0.59:
   handle the special gop size in order to pass some CTS tests in which large gopsize will be set
   
