[Vpu Wrapper]:   version 1.0.61
    (1) MA-6903: failed when testing android.media.cts.AdaptivePlaybackTest for h263 and vp8 codec
        - enable resolution change for H.263 and VP8
        - need to insert system header manually when resolution change happen for VP8.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.61:
+  enable resolution change report for vp8 and H.263
+
 ver 1.0.60:
   fix the inaccurate crop info for vp8
 
