[Vpu Wrapper]:   version 1.0.62
    (1) MMFMWK-6814:[LMX6DQ_SD]VPUEnc:After set the frame rate to 0 fps, MJPEG Encoder produced clips
        played very quickly without any error log print out, 100%
        solution: add frame rate check and return failure if frame rate is invalid value (<=0)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.62:
+  add check for invalid frame rate
+
 ver 1.0.61:
   enable resolution change report for vp8 and H.263
 
