[Vpu Wrapper]:  version 1.0.63
   (1) fix special clips in which there are two different SPS headers before the first frame
       In this special clips, resoluton change will be triggered.
       We need to update 'nLastFrameEndPosPhy' in seqinit stage to avoid feed the same SPS to vpu repeatedly
       another way, we need to disable avcc conversion when re-feeding SPS data (non-avcc) to vpu

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.63:
+  fix special clips in which there are two different SPS headers before the first frame
+
 ver 1.0.62:
   add check for invalid frame rate
 
