[vpu wrapper]:  version 1.0.64
   (1) Fix several coverity issues, includes
       - MMFMWK-7000  Uninitialized scalar variable (UNINIT) in function VpuDecBuf (CID:27183)
         make sure memset of 'decParam' is called for all path
       - MMFMWK-7001  Resource leak in function VpuSeqInit (CID: 27184)
         check and free pHeader buffer for some special cases
       - MMFMWK-7002  Resource leak in function VpuConvertAvccHeader (CID 27185)
   	 check and free pTemp buffer when header is corrupt
       - MMFMWK-7003  Resource leak in function VpuConvertAvccFrame (CID 27186)
         check and free pNewFrm buffer when data is corrupt

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.64:
+  fix some potential issues, include memory leak and uninitialized variable
+
 ver 1.0.63:
   fix special clips in which there are two different SPS headers before the first frame
 
