[vpu wrapper]:  version 1.0.65
   (1) fix MMFMWK-7050 - vpu VC1 decoder hang when decoding some wrong data
       return error directly when detect the profile is not supported
       and it is reasonable to return error immediately since only one sequence header inserted in whole rcv clip

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.65:
+  fix vpu hange issue caused by non-supported vc1 clip
+
 ver 1.0.64:
   fix some potential issues, include memory leak and uninitialized variable
 
