[Vpu Wrapper]: version 1.0.66
   (1) fix CTS issue:
       MA-7578 - CTS failure for case MediaRandomTest_testRecorderRandomAction
       For H.263 encoder, we will rectify invalid frame rate (less than 14) to 15.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.66:
+  fix h263 encoder failure issue due to invalid frame rate
+
 ver 1.0.65:
   fix vpu hange issue caused by non-supported vc1 clip
 
