[Vpu Wrapper]:  version 1.0.67
   (1) Fix several coverity issues
       Add several double check to invalid or null value
       - MMFMWK-7075: Coverity 27181: UNUSED_VALUE in Component VPU_WRAPPER, File vpu_wrapper.c
       - MMFMWK-7076: Coverity 27182: UNUSED_VALUE in Component VPU_WRAPPER, File vpu_wrapper.c
       - MMFMWK-7077: Coverity 27188: FORWARD_NULL in Component VPU_WRAPPER, File vpu_wrapper.c
       - MMFMWK-7078: Coverity 27189: CHECKED_RETURN in Component VPU_WRAPPER, File vpu_wrapper.c
   (2) Change the DivX log level from error to warning

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.67:
+  add several double check to invalid or null value
+
 ver 1.0.66:
   fix h263 encoder failure issue due to invalid frame rate
 
