[vpu wrapper]: version 1.0.68
   (1) fix coverity:
       - MMFMWK-7241: Coverity 55086: CHECKED_RETURN in Component VPU_WRAPPER, File ..../vpu_wrapper.c
         Add check to return value from function VpuFillData

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 
 Change log:
 
+ver 1.0.68:
+  add check to return value of function
+
 ver 1.0.67:
   add several double check to invalid or null value
 
